--- a/Proyecto_ceros/src/main/resources/application.properties
+++ b/Proyecto_ceros/src/main/resources/application.properties
@@ -6,5 +6,5 @@ spring.datasource.password=root
 server.port = 8181
 
 spring.jpa.show-sql=true
-#spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=create
 logging.level.org.hibernate.SQL=debug
